Bug 364678 Incorrectly styled text after bug 362665 (only on western page??) r=vlad